--- a/price.html
+++ b/price.html
@@ -35,24 +35,23 @@
     <link rel="stylesheet" href="./src/style.css" />
 
     <!-- Title & Meta Description -->
-    <title>Автосервіс Каскад у Павлограді | Ремонт авто, діагностика, ТО</title>
+    <title>Ремонт авто в Павлограде | Цены на услуги автосервиса Каскад</title>
     <meta
       name="description"
-      content="🔧 Автосервіс «Каскад» у Павлограді: ремонт, діагностика, ТО, ГБО, кондиціонери, двигуни, ходова, кузовні роботи, шиномонтаж. 🚗 Телефонуйте зараз!"
+      content="🚗 Профессиональный ремонт автомобилей в Павлограде по доступным ценам. СТО Каскад: диагностика, ТО, ремонт двигателя, ходовой, ГБО, кондиционеров. ☎️ Звоните для консультации!"
     />
 
     <!-- Canonical -->
     <link rel="canonical" href="https://kaskad.in.ua/" />
 
     <!-- Open Graph -->
-    <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Автосервіс Каскад у Павлограді | Ремонт авто, діагностика, ТО"
+      content="Ремонт авто в Павлограде | Автосервис Каскад - цены и услуги"
     />
     <meta
       property="og:description"
-      content="🔧 Автосервіс «Каскад»: ремонт та обслуговування авто у Павлограді. ГБО, кондиціонери, двигуни, ходова, кузовні роботи. ☎️ Телефонуйте!"
+      content="🔧 Качественный ремонт автомобилей в Павлограде: двигатель, ходовая, электрика, ГБО, кондиционеры. Доступные цены, гарантия на работы. ☎️ Записывайтесь!"
     />
     <meta property="og:image" content="https://kaskad.in.ua/images/logo.png" />
     <meta property="og:url" content="https://kaskad.in.ua/" />
@@ -106,53 +105,50 @@
             <ul class="dropdown-content">
               <li>
                 <a
-                  href="./service-catalog.html#dvigatel"
+                  href="./remont-dvigatelya.html"
                   data-translate="nav-item-dvig"
                   >Двигун</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#hodovka"
-                  data-translate="nav-item-hodov"
+                <a href="./remont-hodovoy.html" data-translate="nav-item-hodov"
                   >Ходова частина</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#electrika"
+                  href="./remont-elektriki.html"
                   data-translate="nav-item-elektro"
                   >Електрика</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#tormoznaja"
+                  href="./remont-tormoznoi-sistemy.html"
                   data-translate="nav-item-torm"
                   >Гальмівна система</a
                 >
               </li>
               <li>
                 <a
-                  href="./service-catalog.html#transmisija"
+                  href="./remont-transmissii.html"
                   data-translate="nav-item-trans"
                   >Трансмісія</a
                 >
               </li>
               <li>
-                <a
-                  href="./service-catalog.html#servisnoe"
-                  data-translate="nav-item-to"
+                <a href="./technical-service.html" data-translate="nav-item-to"
                   >Технічне обслуговування</a
                 >
               </li>
-              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li>
-                <a href="" data-translate="nav-item-diagn">Діагностика</a>
+                <a href="./car-diagnostics.html" data-translate="nav-item-diagn"
+                  >Діагностика</a
+                >
               </li>
               <li>
-                <a href="" data-translate="nav-item-chip"
-                  >Програмне тюнінгування</a
+                <a href="./air-conditioning.html" data-translate="nav-item-chip"
+                  >Автокондиционеры</a
                 >
               </li>
             </ul>
