--- a/parts.html
+++ b/parts.html
@@ -44,7 +44,7 @@
     />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://kaskad.in.ua/zapchastyny" />
+    <link rel="canonical" href="https://kaskad.in.ua/parts" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
@@ -57,7 +57,7 @@
       content="✔ Підбір і доставка автозапчастин у Павлограді. Оригінали й аналоги, гарантія, консультації. Телефонуйте — допоможемо!"
     />
     <meta property="og:image" content="https://kaskad.in.ua/images/logo.png" />
-    <meta property="og:url" content="https://kaskad.in.ua/zapchastyny" />
+    <meta property="og:url" content="https://kaskad.in.ua/parts" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
