--- a/parts.html
+++ b/parts.html
@@ -438,7 +438,7 @@
                   «Одна команда — один стандарт качества.»
                 </p>
               </div>
-              <div class="team-card">
+              <!-- <div class="team-card">
                 <picture>
                   <source
                     srcset="./src/img/colleagues/colleagues-2.webp"
@@ -463,7 +463,7 @@
                 <p class="team-card-content" data-translate="card-vlad-content">
                   «Современные технологии + старые добрые принципы работы»
                 </p>
-              </div>
+              </div> -->
             </div>
             <div class="callback-container">
               <h3 class="callbaack-main-title">
