--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="./src/js/main.js" defer></script>
     <script src="./src/js/language.js" defer></script>
     <script src="./src/js/services-carousel.js" defer></script>
+    <script src="./src/js/seasonal-offers.js" defer></script>
 
     <!-- Schema.org JSON-LD -->
     <script type="application/ld+json">
@@ -415,13 +416,41 @@
             </div>
           </div>
         </section>
+        <section class="seasonal-offers">
+          <h2>Популярні послуги СТО КАСКАД</h2>
+          <div class="offers-slider">
+            <div class="slider-track">
+              <a href="./toplivnaya-sistema.html" class="slide">
+                <img
+                  src="./src/img/seasonal-TS.webp"
+                  alt="Промывка системы охлаждения"
+                />
+              </a>
+              <a href="./remont-dvigatelya.html" class="slide">
+                <img
+                  src="./src/img/seasonal-dvigatel.webp"
+                  alt="Установка ГБО"
+                />
+              </a>
+              <a href="./remont-hodovoy.html" class="slide">
+                <img
+                  src="./src/img/service/dvigatel/eeoeyod3zfy-qpchn35jhbf9iqnf42aroejhsvdmz0fckfqusifc90.jpg"
+                  alt="Эвакуатор"
+                />
+              </a>
+            </div>
+          </div>
+        </section>
         <section class="main-content-section">
           <div class="main-content-div">
             <div class="main-content">
-              <h2 data-translate="main-content-title">
-                Автосервіс «Каскад» у Павлограді – професійний догляд за вашим
-                авто
+              <h2 class="TS-title" style="font-size: 42px">
+                Автосервіс «Каскад» у Павлограді – <br />
+                <span class="span-TS-title">
+                  професійний догляд за вашим авто</span
+                >
               </h2>
+              <img class="img-content" src="./src/img/kaskad/i25.jpg" alt="" />
               <p data-translate="main-content-txt01">
                 СТО «Каскад» у Павлограді — це надійне місце, де автомобілі
                 отримують комплексне обслуговування від досвідчених майстрів. Ми
@@ -471,9 +500,6 @@
                 швидке виконання та справедливу ціну. Якою б не була причина
                 звернення — ми завжди готові вам допомогти.
               </p>
-            </div>
-            <div>
-              <img class="img-content" src="./src/img/kaskad/i25.jpg" alt="" />
             </div>
           </div>
         </section>
