--- a/evakuator.html
+++ b/evakuator.html
@@ -121,18 +121,20 @@
             >
           </li> -->
           <li class="nav-item">
-            <a href="./parts.html" data-translate="">Подбор запчастей</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="./evakuator.html" data-translate="nav-item"
-              >Послуги евакуатора</a
+            <a href="./parts.html" data-translate="nav-item-zapch"
+              >Подбор запчастей</a
             >
           </li>
 
           <li class="nav-item">
-            <a href="./toplivnaya-sistema.html" data-translate="nav-item"
-              >Паливна система</a
+            <a href="./evakuator.html" data-translate="nav-item-EVA"
+              >Эвакуатор</a
+            >
+          </li>
+
+          <li class="nav-item">
+            <a href="./toplivnaya-sistema.html" data-translate="nav-item-TS"
+              >Топливная система</a
             >
           </li>
 
@@ -252,10 +254,10 @@
   <body>
     <main>
       <div class="container">
-        <section class="hero-gbo">
+        <section class="hero-gbo hero-EVA">
           <div>
             <div class="hero-content">
-              <h1 class="hero-title" data-translate="hero-title-">
+              <h1 class="hero-title" data-translate="hero-title-eva">
                 ЭВАКУАТОР ПАВЛОГРАД
               </h1>
               <div class="hero-content-container">
@@ -274,7 +276,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-">
+                  <p data-translate="hero-content-eva1">
                     Быстрая подача эвакуатора.
                   </p>
                 </div>
@@ -293,7 +295,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-">
+                  <p data-translate="hero-content-eva2">
                     Надежная транспортировка авто.
                   </p>
                 </div>
@@ -312,14 +314,16 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p data-translate="hero-content-">Гарантия качества услуг!</p>
+                  <p data-translate="hero-content-eva3">
+                    Гарантия качества услуг!
+                  </p>
                 </div>
               </div>
               <button
                 type="button"
                 class="details-hero-btn"
                 id="openModalBtn"
-                data-translate="details-hero-btn-"
+                data-translate="details-hero-btn-eva"
               >
                 ЗАКАЗАТЬ ЭВАКУАТОР
               </button>
@@ -358,7 +362,7 @@
         </section>
         <section class="evacuator-section">
           <img src="./src/img/kaskad-evakuator-img1.webp" alt="" />
-          <p>
+          <p data-translate="evacuator-section-p-eva1">
             Автомобиль, как и любое транспортное средство, может попасть в
             дорожную аварию, заглохнуть в самый неподходящий момент или на
             оживленном участке дороги. А еще у него может элементарно
@@ -367,17 +371,20 @@
             срочная эвакуация.
           </p>
 
-          <h3>Служба эвакуации в Павлограде</h3>
-          <p>
+          <h3 data-translate="evacuator-section-h3-eva1">
+            Служба эвакуации в Павлограде
+          </h3>
+          <p data-translate="evacuator-section-p-eva2">
             Если неприятность случилась с вами в Павлограде или Днепропетровской
-            области - быстро придем на помощь! В любой период дня или ночи вы
-            можете вызвать эвакуатор службы «Каскад». Вызов будет мгновенно
-            принят нашими диспетчерами, и уже через 20-30 минут эвакуатор
-            прибудет к вам.
+            области - быстро придем на помощь! В любой момент вы можете вызвать
+            эвакуатор службы «Каскад». Вызов будет мгновенно принят нашими
+            диспетчерами, и уже через 20-30 минут эвакуатор прибудет к вам.
           </p>
 
-          <h3>Как заказать эвакуатор в Павлограде?</h3>
-          <p>
+          <h3 data-translate="evacuator-section-h3-eva2">
+            Как заказать эвакуатор в Павлограде?
+          </h3>
+          <p data-translate="evacuator-section-p-eva3">
             Заказ эвакуационной техники можно по телефону. Рекомендуется
             сообщить нам:
           </p>
@@ -397,7 +404,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Марку и модель вашего авто</p>
+              <p data-translate="evacuator-benefits-list-p-eva1">
+                Марку и модель вашего авто
+              </p>
             </li>
             <li>
               <svg
@@ -414,7 +423,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Массу и габаритные размеры</p>
+              <p data-translate="evacuator-benefits-list-p-eva2">
+                Массу и габаритные размеры
+              </p>
             </li>
             <li>
               <svg
@@ -431,7 +442,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Место нахождения автомобиля</p>
+              <p data-translate="evacuator-benefits-list-p-eva3">
+                Место нахождения автомобиля
+              </p>
             </li>
             <li>
               <svg
@@ -448,7 +461,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Тип возникшей проблемы</p>
+              <p data-translate="evacuator-benefits-list-p-eva4">
+                Тип возникшей проблемы
+              </p>
             </li>
             <li>
               <svg
@@ -465,13 +480,19 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Адрес доставки автомобиля</p>
+              <p data-translate="evacuator-benefits-list-p-eva5">
+                Адрес доставки автомобиля
+              </p>
             </li>
           </ul>
-          <p>Это поможет нам выбрать оптимальную технику для вашего случая.</p>
+          <p data-translate="evacuator-section-p-eva4">
+            Это поможет нам выбрать оптимальную технику для вашего случая.
+          </p>
 
-          <h3>Надежность и безопасность перевозки</h3>
-          <p>
+          <h3 data-translate="evacuator-section-h3-eva3">
+            Надежность и безопасность перевозки
+          </h3>
+          <p data-translate="evacuator-section-p-eva5">
             Мы гарантируем безопасность перевозки поврежденного автомобиля.
             После подъема на платформу транспортное средство жестко фиксируется
             с помощью крепежных элементов и специальных ремней. Время погрузки
@@ -479,8 +500,10 @@
             проблемах может потребоваться дополнительное оборудование.
           </p>
           <img src="./src/img/kaskad-evakuator-img2.webp" alt="" />
-          <h3>Какие транспортные средства мы эвакуируем?</h3>
-          <p>
+          <h3 data-translate="evacuator-section-h3-eva4">
+            Какие транспортные средства мы эвакуируем?
+          </h3>
+          <p data-translate="evacuator-section-p-eva6">
             Наша служба эвакуации в Павлограде обслуживает все типы транспортных
             средств:
           </p>
@@ -500,7 +523,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Легковые автомобили всех марок</p>
+              <p data-translate="evacuator-benefits-list-p-eva6">
+                Легковые автомобили всех марок
+              </p>
             </li>
             <li>
               <svg
@@ -517,7 +542,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Внедорожники и джипы</p>
+              <p data-translate="evacuator-benefits-list-p-eva7">
+                Внедорожники и джипы
+              </p>
             </li>
             <li>
               <svg
@@ -534,7 +561,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Микроавтобусы и автобусы</p>
+              <p data-translate="evacuator-benefits-list-p-eva8">
+                Микроавтобусы и автобусы
+              </p>
             </li>
             <li>
               <svg
@@ -551,7 +580,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Грузовые автомобили до 3.5 тонн</p>
+              <p data-translate="evacuator-benefits-list-p-eva9">
+                Грузовые автомобили до 5 тонн
+              </p>
             </li>
             <li>
               <svg
@@ -568,7 +599,9 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Мотоциклы и квадроциклы</p>
+              <p data-translate="evacuator-benefits-list-p-eva10">
+                Мотоциклы и квадроциклы
+              </p>
             </li>
             <li>
               <svg
@@ -585,50 +618,60 @@
                   stroke-linecap="round"
                 />
               </svg>
-              <p>Сельскохозяйственную технику</p>
+              <p data-translate="evacuator-benefits-list-p-eva11">
+                Сельскохозяйственную технику
+              </p>
             </li>
           </ul>
 
-          <h3>Преимущества службы эвакуации «Каскад»</h3>
+          <h3 data-translate="evacuator-section-h3-eva5">
+            Преимущества службы эвакуации «Каскад»
+          </h3>
           <div class="advantages-grid">
             <div class="advantage-item">
-              <h4>Круглосуточная работа</h4>
-              <p>Работаем 24/7, включая выходные и праздничные дни</p>
+              <h4 data-translate="evacuator-section-h4-eva1">
+                Работаем каждый день
+              </h4>
+              <p data-translate="evacuator-section-p-eva7">
+                Работаем всю неделю, включая выходные и праздничные дни
+              </p>
             </div>
             <div class="advantage-item">
-              <h4>Быстрая подача</h4>
-              <p>Время подачи эвакуатора по Павлограду - до 30 минут</p>
+              <h4 data-translate="evacuator-section-h4-eva2">Быстрая подача</h4>
+              <p data-translate="evacuator-section-p-eva8">
+                Время подачи эвакуатора по Павлограду - до 30 минут
+              </p>
             </div>
             <div class="advantage-item">
-              <h4>Опытные водители</h4>
-              <p>Все водители имеют многолетний стаж работы</p>
-            </div>
-            <div class="advantage-item">
-              <h4>Доступные цены</h4>
-              <p>Конкурентоспособные цены от 15 грн/км</p>
+              <h4 data-translate="evacuator-section-h4-eva3">
+                Опытные водители
+              </h4>
+              <p data-translate="evacuator-section-p-eva9">
+                Все водители имеют многолетний стаж работы
+              </p>
             </div>
           </div>
 
-          <h3>Эвакуатор в Павлограде - надежная помощь на дороге</h3>
-          <p>
+          <h3 data-translate="evacuator-section-h3-eva6">
+            Эвакуатор в Павлограде - надежная помощь на дороге
+          </h3>
+          <p data-translate="evacuator-section-p-eva10">
             Служба эвакуации «Каскад» в Павлограде предлагает профессиональные
-            услуги по транспортировке автомобилей с 2010 года. Мы
-            специализируемся на эвакуации легковых и грузовых автомобилей,
-            внедорожников, микроавтобусов и специальной техники. Наш автопарк
-            включает современные эвакуаторы с гидравлическими платформами и
-            дополнительным оборудованием для сложных случаев.
+            услуги по транспортировке автомобилей. Мы специализируемся на
+            эвакуации легковых и грузовых автомобилей, внедорожников,
+            микроавтобусов и специальной техники.
           </p>
 
-          <p>
+          <p data-translate="evacuator-section-p-eva11">
             Если вам нужен
-            <strong>эвакуатор в Павлограде недорого</strong>, вы обратились по
-            адресу. Мы работаем по всей Днепропетровской области, включая
-            соседние населенные пункты. Наши услуги особенно востребованы при
-            ДТП, технических неисправностях, заблокированных колесах, а также
-            для транспортировки новых автомобилей из салонов.
+            <strong>эвакуатор в Павлограде</strong>, вы обратились по адресу. Мы
+            работаем по всей Днепропетровской области, включая соседние
+            населенные пункты. Наши услуги особенно востребованы при ДТП,
+            технических неисправностях, заблокированных колесах, а также для
+            транспортировки новых автомобилей из салонов.
           </p>
 
-          <p>
+          <p data-translate="evacuator-section-p-eva12">
             Что делать при поломке автомобиля? Сохраняйте спокойствие и
             вызывайте эвакуатор службы «Каскад». Установите аварийный знак,
             включите аварийную сигнализацию и отойдите на безопасное расстояние.
@@ -637,30 +680,42 @@
           </p>
         </section>
         <section class="evacuator-price-section">
-          <h2>Цены на услуги эвакуатора в Павлограде</h2>
+          <h2 data-translate="evacuator-price-section-h2-eva1">
+            Цены на услуги эвакуатора в Павлограде
+          </h2>
           <table>
             <thead>
               <tr>
-                <th>Найменування послуг:</th>
-                <th>Ціна від, грн.</th>
+                <th data-translate="evacuator-price-section-th">
+                  Наименование услуг:
+                </th>
+                <th data-translate="evacuator-price-section-thh">
+                  Цена от, грн.
+                </th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Легковое авто</td>
-                <td class="price">від 1000 грн.</td>
+                <td data-translate="evacuator-price-section-th1">
+                  Легковое авто
+                </td>
+                <td class="price">1000 грн.</td>
               </tr>
               <tr>
-                <td>Джип, Бус</td>
-                <td class="price">від 1100 грн.</td>
+                <td data-translate="evacuator-price-section-th2">Джип, Бус</td>
+                <td class="price">1100 грн.</td>
               </tr>
               <tr>
-                <td>Міні спец техніка</td>
-                <td class="price">від 1200 грн.</td>
+                <td data-translate="evacuator-price-section-th3">
+                  Мини спец техника
+                </td>
+                <td class="price">1200 грн.</td>
               </tr>
               <tr>
-                <td>Негабарит</td>
-                <td class="price">Договірна</td>
+                <td data-translate="evacuator-price-section-th4">Негабарит</td>
+                <td class="price" data-translate="evacuator-price-section-th41">
+                  Договорная
+                </td>
               </tr>
             </tbody>
           </table>
