--- a/index.html
+++ b/index.html
@@ -181,18 +181,20 @@
             >
           </li> -->
           <li class="nav-item">
-            <a href="./parts.html" data-translate="">Подбор запчастей</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="./evakuator.html" data-translate="nav-item"
-              >Послуги евакуатора</a
+            <a href="./parts.html" data-translate="nav-item-zapch"
+              >Подбор запчастей</a
             >
           </li>
 
           <li class="nav-item">
-            <a href="./toplivnaya-sistema.html" data-translate="nav-item"
-              >Паливна система</a
+            <a href="./evakuator.html" data-translate="nav-item-EVA"
+              >Эвакуатор</a
+            >
+          </li>
+
+          <li class="nav-item">
+            <a href="./toplivnaya-sistema.html" data-translate="nav-item-TS"
+              >Топливная система</a
             >
           </li>
 
