--- a/price.html
+++ b/price.html
@@ -92,9 +92,16 @@
               >Подбор запчастей</a
             >
           </li>
+
           <li class="nav-item">
-            <a href="./ustanovka-gbo.html" data-translate="nav-item-gbo"
-              >Установка ГБО</a
+            <a href="./evakuator.html" data-translate="nav-item-EVA"
+              >Эвакуатор</a
+            >
+          </li>
+
+          <li class="nav-item">
+            <a href="./toplivnaya-sistema.html" data-translate="nav-item-TS"
+              >Топливная система</a
             >
           </li>
 
@@ -149,6 +156,11 @@
               <li>
                 <a href="./air-conditioning.html" data-translate="nav-item-chip"
                   >Автокондиционеры</a
+                >
+              </li>
+              <li>
+                <a href="./ustanovka-gbo.html" data-translate="nav-item-gbo"
+                  >Установка ГБО</a
                 >
               </li>
             </ul>
@@ -1303,6 +1315,46 @@
               <tr>
                 <td>Зарядка акумулятора</td>
                 <td class="price">150 грн.</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <h2 data-translate="evacuator-price-section-h2-eva17">
+            Услуги эвакуатора
+          </h2>
+          <table>
+            <thead>
+              <tr>
+                <th data-translate="evacuator-price-section-th">
+                  Наименование услуг:
+                </th>
+                <th data-translate="evacuator-price-section-thh">
+                  Цена от, грн.
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td data-translate="evacuator-price-section-th1">
+                  Легковое авто
+                </td>
+                <td class="price">1000 грн.</td>
+              </tr>
+              <tr>
+                <td data-translate="evacuator-price-section-th2">Джип, Бус</td>
+                <td class="price">1100 грн.</td>
+              </tr>
+              <tr>
+                <td data-translate="evacuator-price-section-th3">
+                  Мини спец техника
+                </td>
+                <td class="price">1200 грн.</td>
+              </tr>
+              <tr>
+                <td data-translate="evacuator-price-section-th4">Негабарит</td>
+                <td class="price" data-translate="evacuator-price-section-th41">
+                  Договорная
+                </td>
               </tr>
             </tbody>
           </table>
