--- a/remont-dvigatelya.html
+++ b/remont-dvigatelya.html
@@ -97,9 +97,16 @@
               >Подбор запчастей</a
             >
           </li>
+
           <li class="nav-item">
-            <a href="./ustanovka-gbo.html" data-translate="nav-item-gbo"
-              >Установка ГБО</a
+            <a href="./evakuator.html" data-translate="nav-item-EVA"
+              >Эвакуатор</a
+            >
+          </li>
+
+          <li class="nav-item">
+            <a href="./toplivnaya-sistema.html" data-translate="nav-item-TS"
+              >Топливная система</a
             >
           </li>
 
@@ -154,6 +161,11 @@
               <li>
                 <a href="./air-conditioning.html" data-translate="nav-item-chip"
                   >Автокондиционеры</a
+                >
+              </li>
+              <li>
+                <a href="./ustanovka-gbo.html" data-translate="nav-item-gbo"
+                  >Установка ГБО</a
                 >
               </li>
             </ul>
