--- a/index.html
+++ b/index.html
@@ -419,27 +419,109 @@
           </div>
         </section>
         <section class="seasonal-offers">
-          <h2>Популярні послуги СТО КАСКАД</h2>
+          <h2><span>Популярні послуги</span> СТО КАСКАД:</h2>
           <div class="offers-slider">
             <div class="slider-track">
-              <a href="./toplivnaya-sistema.html" class="slide">
-                <img
-                  src="./src/img/seasonal-TS.webp"
-                  alt="Промывка системы охлаждения"
-                />
+              <!-- Слайд 1: Обслуживание системы охлаждения -->
+              <a href="./toplivnaya-sistema.html" class="slide active">
+                <div class="slide-container">
+                  <div class="seasonal-content">
+                    <h3>Обслуживание системы охлаждения</h3>
+                    <p class="urgency-text">
+                      🔥 <strong>АКЦИЯ!</strong> До конца месяца - скидка 15% на
+                      комплексное обслуживание!
+                    </p>
+                    <p>
+                      ❄️ <strong>Зима близко!</strong> Не ждите, пока печка
+                      перестанет греть в самый неподходящий момент. Наша
+                      профессиональная промывка системы охлаждения вернет тепло
+                      в ваш салон и защитит двигатель от перегрева.
+                    </p>
+                    <div class="price">от 500 грн</div>
+                    <button class="details-hero-btn">Подробнее</button>
+                  </div>
+                  <div class="seasonal-media">
+                    <video muted loop playsinline preload="metadata">
+                      <source
+                        src="./src/video/sist-ohlagdeniya.MOV"
+                        type="video/mp4"
+                      />
+                      <source
+                        src="./src/video/sist-ohlagdeniya.MOV"
+                        type="video/webm"
+                      />
+                    </video>
+                  </div>
+                </div>
               </a>
+
+              <!-- Слайд 2: Диагностика и ремонт двигателя -->
               <a href="./remont-dvigatelya.html" class="slide">
-                <img
-                  src="./src/img/seasonal-dvigatel.webp"
-                  alt="Установка ГБО"
-                />
+                <div class="slide-container">
+                  <div class="seasonal-content">
+                    <h3>Диагностика и ремонт двигателя</h3>
+                    <p>
+                      💰 <strong>Экономьте на ремонте!</strong> Своевременная
+                      диагностика снижает риски дорогостоящего ремонта двигателя
+                      стоимостью 40 000 грн!
+                    </p>
+                    <p>
+                      🚀 <strong>Верните мощность вашему авто!</strong> Троит
+                      двигатель? Увеличился расход топлива? Потерялась динамика?
+                      Наши специалисты точно определят причину и вернут былую
+                      мощь!
+                    </p>
+                    <div class="price">от 800 грн</div>
+                    <button class="details-hero-btn">Подробнее</button>
+                  </div>
+                  <div class="seasonal-media">
+                    <video muted loop playsinline preload="metadata">
+                      <source src="./src/video/dvigatel.MOV" type="video/mp4" />
+                      <source
+                        src="./src/video/dvigatel.MOV"
+                        type="video/webm"
+                      />
+                    </video>
+                  </div>
+                </div>
               </a>
+
+              <!-- Слайд 3: Диагностика и ремонт ходовой -->
               <a href="./remont-hodovoy.html" class="slide">
-                <img
-                  src="./src/img/service/dvigatel/eeoeyod3zfy-qpchn35jhbf9iqnf42aroejhsvdmz0fckfqusifc90.jpg"
-                  alt="Эвакуатор"
-                />
+                <div class="slide-container">
+                  <div class="seasonal-content">
+                    <h3>Диагностика и ремонт ходовой</h3>
+                    <p class="urgency-text">
+                      🛡️ <strong>БЕЗОПАСНОСТЬ ПРЕЖДЕ ВСЕГО!</strong> При
+                      комплексном ремонте - балансировка колес в подарок!
+                    </p>
+                    <p>
+                      🛣️ <strong>Комфорт на каждой дороге!</strong> Стуки в
+                      подвеске? Машину "ведет" в сторону? Вибрация на скорости?
+                      Мы вернем уверенность в управлении и безопасность вашей
+                      семье!
+                    </p>
+                    <div class="price">от 600 грн</div>
+                    <button class="details-hero-btn">Подробнее</button>
+                  </div>
+                  <div class="seasonal-media">
+                    <video muted loop playsinline preload="metadata">
+                      <source src="./src/video/hodovaya.MOV" type="video/mp4" />
+                      <source
+                        src="./src/video/hodovaya.MOV"
+                        type="video/webm"
+                      />
+                    </video>
+                  </div>
+                </div>
               </a>
+            </div>
+
+            <!-- Навигационные точки -->
+            <div class="slider-dots">
+              <span class="dot active" data-slide="0"></span>
+              <span class="dot" data-slide="1"></span>
+              <span class="dot" data-slide="2"></span>
             </div>
           </div>
         </section>
