--- a/index.html
+++ b/index.html
@@ -419,35 +419,69 @@
           </div>
         </section>
         <section class="seasonal-offers">
-          <h2><span>Популярні послуги</span> СТО КАСКАД:</h2>
+          <h2>
+            <span
+              class="seasonal-offers-h2-span"
+              data-translate="seasonal-offers-h2-span"
+              >Популярные услуги</span
+            ><span data-translate="seasonal-offers-h2"> СТО КАСКАД:</span>
+          </h2>
           <div class="offers-slider">
             <div class="slider-track">
               <!-- Слайд 1: Обслуживание системы охлаждения -->
               <a href="./toplivnaya-sistema.html" class="slide active">
                 <div class="slide-container">
                   <div class="seasonal-content">
-                    <h3>Обслуживание системы охлаждения</h3>
+                    <h3 data-translate="seasonal-offers-h31">
+                      Обслуживание системы охлаждения
+                    </h3>
                     <p class="urgency-text">
-                      🔥 <strong>АКЦИЯ!</strong> До конца месяца - скидка 15% на
-                      комплексное обслуживание!
+                      🔥
+                      <strong
+                        ><span data-translate="seasonal-offers-p1">
+                          АКЦИЯ!</span
+                        ></strong
+                      >
+                      <span data-translate="seasonal-offers-p2">
+                        До конца месяца - скидка 15% на комплексное
+                        обслуживание!</span
+                      >
                     </p>
                     <p>
-                      ❄️ <strong>Зима близко!</strong> Не ждите, пока печка
-                      перестанет греть в самый неподходящий момент. Наша
-                      профессиональная промывка системы охлаждения вернет тепло
-                      в ваш салон и защитит двигатель от перегрева.
+                      ❄️
+                      <strong
+                        ><span data-translate="seasonal-offers-p3">
+                          Зима близко!</span
+                        ></strong
+                      >
+                      <span data-translate="seasonal-offers-p4">
+                        Не ждите, пока печка перестанет греть в самый
+                        неподходящий момент. Наша профессиональная промывка
+                        системы охлаждения вернет тепло в ваш салон и защитит
+                        двигатель от перегрева.</span
+                      >
                     </p>
-                    <div class="price">от 500 грн</div>
-                    <button class="details-hero-btn">Подробнее</button>
+                    <div
+                      class="seasonal-price"
+                      data-translate="seasonal-offers-price1"
+                    >
+                      от 500 грн
+                    </div>
+                    <button
+                      class="details-hero-btn seasonal-btn"
+                      data-translate="seasonal-offers-btn"
+                    >
+                      Подробнее
+                    </button>
                   </div>
                   <div class="seasonal-media">
                     <video muted loop playsinline preload="metadata">
                       <source
-                        src="./src/video/sist-ohlagdeniya.MOV"
+                        src="./src/video/toplivnaja-sistemaa.mp4"
                         type="video/mp4"
                       />
                       <source
-                        src="./src/video/sist-ohlagdeniya.MOV"
+                        src="./src/video/toplivnaja-sistemaa.webm"
                         type="video/webm"
                       />
                     </video>
@@ -459,26 +493,55 @@
               <a href="./remont-dvigatelya.html" class="slide">
                 <div class="slide-container">
                   <div class="seasonal-content">
-                    <h3>Диагностика и ремонт двигателя</h3>
+                    <h3 data-translate="seasonal-offers-h32">
+                      Диагностика и ремонт двигателя
+                    </h3>
                     <p>
-                      💰 <strong>Экономьте на ремонте!</strong> Своевременная
-                      диагностика снижает риски дорогостоящего ремонта двигателя
-                      стоимостью 40 000 грн!
+                      💰
+                      <strong
+                        ><span data-translate="seasonal-offers-p5">
+                          Экономьте на ремонте!</span
+                        ></strong
+                      >
+                      <span data-translate="seasonal-offers-p6">
+                        Своевременная диагностика снижает риски дорогостоящего
+                        ремонта двигателя стоимостью 40 000 грн!</span
+                      >
                     </p>
                     <p>
-                      🚀 <strong>Верните мощность вашему авто!</strong> Троит
-                      двигатель? Увеличился расход топлива? Потерялась динамика?
-                      Наши специалисты точно определят причину и вернут былую
-                      мощь!
+                      🚀
+                      <strong
+                        ><span data-translate="seasonal-offers-p7">
+                          Верните мощность вашему авто!</span
+                        ></strong
+                      >
+                      <span data-translate="seasonal-offers-p8">
+                        Троит двигатель? Увеличился расход топлива? Потерялась
+                        динамика? Наши специалисты точно определят причину и
+                        вернут былую мощь!</span
+                      >
                     </p>
-                    <div class="price">от 800 грн</div>
-                    <button class="details-hero-btn">Подробнее</button>
+                    <div
+                      class="seasonal-price"
+                      data-translate="seasonal-offers-price2"
+                    >
+                      от 800 грн
+                    </div>
+                    <button
+                      class="details-hero-btn seasonal-btn"
+                      data-translate="seasonal-offers-btn"
+                    >
+                      Подробнее
+                    </button>
                   </div>
                   <div class="seasonal-media">
                     <video muted loop playsinline preload="metadata">
-                      <source src="./src/video/dvigatel.MOV" type="video/mp4" />
                       <source
-                        src="./src/video/dvigatel.MOV"
+                        src="./src/video/remont-dvigatelya.mp4"
+                        type="video/mp4"
+                      />
+                      <source
+                        src="./src/video/remont-dvigatelya.webm"
                         type="video/webm"
                       />
                     </video>
@@ -490,25 +553,55 @@
               <a href="./remont-hodovoy.html" class="slide">
                 <div class="slide-container">
                   <div class="seasonal-content">
-                    <h3>Диагностика и ремонт ходовой</h3>
+                    <h3 data-translate="seasonal-offers-h33">
+                      Диагностика и ремонт ходовой
+                    </h3>
                     <p class="urgency-text">
-                      🛡️ <strong>БЕЗОПАСНОСТЬ ПРЕЖДЕ ВСЕГО!</strong> При
-                      комплексном ремонте - балансировка колес в подарок!
+                      🛡️
+                      <strong
+                        ><span data-translate="seasonal-offers-p9">
+                          БЕЗОПАСНОСТЬ ПРЕЖДЕ ВСЕГО!</span
+                        ></strong
+                      >
+                      <span data-translate="seasonal-offers-p10">
+                        При комплексном ремонте - балансировка колес в
+                        подарок!</span
+                      >
                     </p>
                     <p>
-                      🛣️ <strong>Комфорт на каждой дороге!</strong> Стуки в
-                      подвеске? Машину "ведет" в сторону? Вибрация на скорости?
-                      Мы вернем уверенность в управлении и безопасность вашей
-                      семье!
+                      🛣️
+                      <strong
+                        ><span data-translate="seasonal-offers-p11">
+                          Комфорт на каждой дороге!</span
+                        ></strong
+                      >
+                      <span data-translate="seasonal-offers-p12">
+                        Стуки в подвеске? Машину "ведет" в сторону? Вибрация на
+                        скорости? Мы вернем уверенность в управлении и
+                        безопасность вашей семье!</span
+                      >
                     </p>
-                    <div class="price">от 600 грн</div>
-                    <button class="details-hero-btn">Подробнее</button>
+                    <div
+                      class="seasonal-price"
+                      data-translate="seasonal-offers-price3"
+                    >
+                      от 600 грн
+                    </div>
+                    <button
+                      class="details-hero-btn seasonal-btn"
+                      data-translate="seasonal-offers-btn"
+                    >
+                      Подробнее
+                    </button>
                   </div>
                   <div class="seasonal-media">
                     <video muted loop playsinline preload="metadata">
-                      <source src="./src/video/hodovaya.MOV" type="video/mp4" />
                       <source
-                        src="./src/video/hodovaya.MOV"
+                        src="./src/video/remont-hodovoy-chasti.mp4"
+                        type="video/mp4"
+                      />
+                      <source
+                        src="./src/video/remont-hodovoy-chasti.webm"
                         type="video/webm"
                       />
                     </video>
@@ -529,7 +622,7 @@
           <div class="main-content-div">
             <div class="main-content">
               <h2 class="TS-title" style="font-size: 42px">
-                Автосервіс «Каскад» у Павлограді – <br />
+                Автосервіс «Каскад» – <br />
                 <span class="span-TS-title">
                   професійний догляд за вашим авто</span
                 >
